@@ -1,3 +1,7 @@
+2006-03-30  Titus Brown  <t@issola.caltech.edu>
+
+	* Updated ClientForm to latest.
+
 2006-03-26  Titus Brown  <t@issola.caltech.edu>
 
 	* Updated dns_check with Bob Halley's suggestions.
